// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step applies isActive prop correctly 1`] = `
<ForwardRef
  $isActive={true}
  $isCompleted={false}
>
  <ForwardRef
    $isActive={true}
    $isCompleted={false}
  >
    <ForwardRef />
  </ForwardRef>
  <ForwardRef
    $isActive={true}
    $isCompleted={false}
  />
  <ForwardRef
    $isActive={true}
    $isCompleted={false}
  >
    <ForwardRef
      $isActive={true}
      $isCompleted={false}
    />
    <ForwardRef />
  </ForwardRef>
</ForwardRef>
`;

exports[`Step applies isCompleted prop correctly 1`] = `
<ForwardRef
  $isActive={false}
  $isCompleted={true}
>
  <ForwardRef
    $isActive={false}
    $isCompleted={true}
  />
  <ForwardRef
    $isActive={false}
    $isCompleted={true}
  />
  <ForwardRef
    $isActive={false}
    $isCompleted={true}
  >
    <ForwardRef
      $isActive={false}
      $isCompleted={true}
    />
    <ForwardRef />
  </ForwardRef>
</ForwardRef>
`;

exports[`Step applies isLast prop correctly 1`] = `
<ForwardRef
  $isActive={false}
  $isCompleted={false}
>
  <ForwardRef
    $isActive={false}
    $isCompleted={false}
  />
  <ForwardRef
    $isActive={false}
    $isCompleted={false}
  >
    <ForwardRef
      $isActive={false}
      $isCompleted={false}
    />
    <ForwardRef />
  </ForwardRef>
</ForwardRef>
`;

exports[`Step applies title prop correctly 1`] = `
<ForwardRef
  $isActive={false}
  $isCompleted={false}
>
  <ForwardRef
    $isActive={false}
    $isCompleted={false}
  />
  <ForwardRef
    $isActive={false}
    $isCompleted={false}
  />
  <ForwardRef
    $isActive={false}
    $isCompleted={false}
  >
    <ForwardRef
      $isActive={false}
      $isCompleted={false}
    >
      Test Title
    </ForwardRef>
    <ForwardRef />
  </ForwardRef>
</ForwardRef>
`;

exports[`Step renders children correctly if isActive is provided 1`] = `
<ForwardRef
  $isActive={true}
  $isCompleted={false}
>
  <ForwardRef
    $isActive={true}
    $isCompleted={false}
  >
    <ForwardRef />
  </ForwardRef>
  <ForwardRef
    $isActive={true}
    $isCompleted={false}
  />
  <ForwardRef
    $isActive={true}
    $isCompleted={false}
  >
    <ForwardRef
      $isActive={true}
      $isCompleted={false}
    />
    <ForwardRef>
      Content
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;
